@@ -31,8 +31,8 @@ var currentPlayingTrackPosition = 0;
 var lmsNowPlaying = Vue.component("lms-now-playing", {
     template: `
 <div>
- <div v-show="(!desktopLayout && page=='now-playing') || (desktopLayout && (info.show || largeView))" class="np-bgnd">
-  <div class="np-bgnd" v-bind:class="[(info.show ? drawInfoBgndImage||drawInfoBackdrop : drawBgndImage||drawBackdrop) ? 'np-bgnd-cover':'np-bgnd-cover-none', (info.show ? drawInfoBackdrop : drawBackdrop) ? 'np-backdrop-blur':'']" id="np-bgnd"></div>
+ <div v-show="(!desktopLayout && page=='now-playing') || (desktopLayout && (info.show || largeView))" class="np-bgnd" v-bind:class="{'np-bgnd-full':nowPlayingFull}">
+  <div v-bind:class="[(info.show ? drawInfoBgndImage||drawInfoBackdrop : drawBgndImage||drawBackdrop) ? 'np-bgnd-cover':'np-bgnd-cover-none', (info.show ? drawInfoBackdrop : drawBackdrop) ? 'np-backdrop-blur':'', nowPlayingFull ? 'np-bgnd-cover-full' : '']" id="np-bgnd"></div>
  </div>
  <v-tooltip top :position-x="timeTooltip.x" :position-y="timeTooltip.y" v-model="timeTooltip.show">{{timeTooltip.text}}</v-tooltip>
  <v-menu v-model="menu.show" :position-x="menu.x" :position-y="menu.y" absolute offset-y>
@@ -1491,6 +1491,9 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
         },
         skipFSeconds() {
             return this.$store.state.skipFSeconds
+        },
+        nowPlayingFull() {
+            return this.$store.state.nowPlayingFull && !this.info.show
         }
     },
     beforeDestroy() {
